--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ a:hover {
     align-items: center;
 }
 
-.checkbox-container {
+.checkbox {
     height: 100px;
     width: 100px;
     position: absolute;
@@ -96,7 +96,7 @@ a:hover {
     transition: 400ms ease-in-out 0;
 }
 
-.header .checkbox-container .checkbox-wrapper .trace {
+.checkbox .trace {
     width: 50px;
     height: 2px;
     background-color: #ffffff;
@@ -105,19 +105,19 @@ a:hover {
     transition: 0.5s ease-in-out 0;
 }
 
-.checkbox-container .checkbox-wrapper .trace:nth-child(1) {
+.checkbox .trace:nth-child(1) {
     top : 26px;
     right: 20px;
     transform: rotate(0);    
 }
 
-.checkbox-container .checkbox-wrapper .trace:nth-child(2) {
+.checkbox .trace:nth-child(2) {
     top: 46px;
     right: 20px;
     transform: rotate(0);
 }
 
-.checkbox-container .checkbox-wrapper .trace:nth-child(3) {
+.checkbox .trace:nth-child(3) {
     top: 66px;
     right: 20px;
     transform: rotate(0);
