--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=IBM+Plex+Sans:wght@300&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
 
 body {
     margin: 0;
     padding: 0;
-    color: #ffffff; 
-    font-family: 'IBM Plex Sans', sans-serif;
+    color: white;
+    font-family: "amatic sc", sans-serif;
 }
 
-/* HEADER */
+/* Header */
 
 .header-wrapper {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background: linear-gradient(-45deg, #000805, #047449, #06a166, #06cf82);
     background-size: 400% 400%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     position: relative;
     animation: backgroundTransition 8s ease-in-out infinite;
 }
-
-h1{
+h1 {
     text-transform: uppercase;
     letter-spacing: 4px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
 }
-
-h2{
+h2 {
     text-transform: uppercase;
     letter-spacing: 4px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
 }
-
 .social-media {
     margin-top: 1rem;
     display: flex;
 }
-
-.social-media a{
+.social-media a {
+    color: white;
     text-decoration: none;
-    color: #ffff;
     font-size: 24px;
     padding: 1rem 4rem;
-    border: 1px solid #ffffff;
+    border: 1px solid white;
     min-width: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: .5s cubic-bezier(0.55, 0.025, 0.675. 0.97);
+    transition: .1s cubic-bezier(0.55, 0.025, 0.675, 0.97);
 }
-
-a:hover {
+.social-media a:hover {
     color: #00008b;
-    background-color: #ffffff;	
+    background-color: #ffffff;
 }
-
 @keyframes backgroundTransition {
     0% {
         background-position: 0% 80%;
@@ -70,20 +56,19 @@ a:hover {
     50% {
         background-position: 80% 100%;
     }
-    100%{
+    100% {
         background-position: 0% 90%;
     }
 }
 
-/* Menu Hamburger */
+/* Menu Hamburguer */
 
 .checkbox-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-.checkbox-container .checkbox-wrapper .checkbox {
+.checkbox {
     height: 100px;
     width: 100px;
     position: absolute;
@@ -95,37 +80,33 @@ a:hover {
     z-index: 9999;
     transition: 400ms ease-in-out 0;
 }
-
 .checkbox .trace {
+    background-color: white;
     width: 50px;
     height: 2px;
-    background-color: #ffffff;
     position: absolute;
     border-radius: 4px;
-    transition: 0.5s ease-in-out 0;
+    transition: 0.5s ease-in-out;
 }
-
 .checkbox .trace:nth-child(1) {
-    top : 26px;
-    right: 20px;
-    transform: rotate(0);    
+    top: 26px;
+    transform: rotate(0);
 }
-
 .checkbox .trace:nth-child(2) {
     top: 46px;
-    right: 20px;
     transform: rotate(0);
 }
-
 .checkbox .trace:nth-child(3) {
     top: 66px;
-    right: 20px;
     transform: rotate(0);
 }
 
+#toggle {
+    display: none;
+}
 
-/*alterações no .menu 
-antes: 
+/* Menu */
+
 .menu {
     position: absolute;
     top: 28px;
@@ -134,38 +115,11 @@ antes:
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    box-shadow: 0px 0px 0px 0px #ffffff;
+    box-shadow: 0px 0px 0px 0px white;
     z-index: -1;
-    transition: 400ms ease-in-out 0; 
+    transition: 400ms ease-in-out 0;
 }
-
-depois: 
-.menu {
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    background: transparent;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 0px 0px #ffffff;
-    z-index: -1;
-    transition: 400ms ease-in-out 0; 
-}*/
-.menu {
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    background: transparent;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 0px 0px #ffffff;
-    z-index: -1;
-    transition: 400ms ease-in-out 0; 
-}
-
-.menu-itens {
+.menu-items {
     position: fixed;
     top: 0;
     left: 0;
@@ -177,50 +131,181 @@ depois:
     z-index: 2;
     opacity: 0;
     visibility: hidden;
-    transition: 400ms ease-in-out 0; 
+    transition: 400ms ease-in-out 0;
 }
-
-.menu-itens ul{
+.menu-items ul {
     list-style-type: none;
 }
-
-.menu-itens ul li{
-    margin: 10px 10px;
-    color: #2E1C2B;
+.menu-items ul li a {
+    color: #085071;
+    margin: 10px 0;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size: 40px;
 }
 
-/*Animação do menu */
+/* Animacao Menu */
 
 #toggle:checked + .checkbox .trace:nth-child(1) {
+    background-color: #085071;
     transform: rotate(45deg);
-    background-color: #06a166;
     top: 47px;
 }
-
 #toggle:checked + .checkbox .trace:nth-child(2) {
     transform: translateX(-100px);
     width: 30px;
     visibility: hidden;
     opacity: 0;
 }
-
 #toggle:checked + .checkbox .trace:nth-child(3) {
+    background-color: #085071;
     transform: rotate(-45deg);
-    background-color: #06a166;
     top: 48px;
 }
 
 #toggle:checked + .checkbox {
-    background-color: white;    
+    background-color: white;
 }
-
-#toggle:checked ~ .menu{
-    box-shadow: 100px 10px 10px 50vmax white;
+#toggle:checked ~ .menu {
+    box-shadow: 0px 0px 0px 100vmax white;
     z-index: 1;
 }
+#toggle:checked ~ .menu-items {
+    visibility: visible;
+    opacity: 1;
+}
 
-/* 0px 0px 0px 100px */
+/* Cards */
+
+.container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 3rem 0;
+}
+.card-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 90%;
+}
+.card {
+    height: 300px;
+    width: 400px;
+    margin: 3rem 0 0;
+    background-image: url(./landscape.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.card-text {
+    color: rgb(109, 109, 109);
+    width: 40%;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+}
+.card-wrapper {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.card-wrapper::before {
+    border: 1px solid white;
+    content: "";
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    display: block;
+    opacity: 0;
+    transition: 0.3s;
+}
+.card-wrapper h2 {
+    font-size: 40px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    margin: 0;
+    transition: 0.3s;
+}
+.card-wrapper a {
+    color: white;
+    font-size: 0;
+    visibility: hidden;
+    opacity: 0;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: 0.3s;
+    text-decoration: none;
+}
+.card:hover .card-wrapper h2 {
+    font-size: 3rem;
+}
+.card:hover .card-wrapper a {
+    visibility: visible;
+    opacity: 1;
+    font-size: 1rem;
+    z-index: 1;
+}
+.card:hover .card-wrapper a:hover {
+    text-decoration: underline;
+}
+.card:hover > .card-wrapper::before {
+    opacity: 1;
+    width: 350px;
+    height: 250px;
+}
+
+/* Footer */
+
+.footer {
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1fa594;
+}
+
+/* Responsivo */
+
+@media (max-width: 800px) {
+    .social-media {
+        display: flex;
+        flex-direction: column;
+    }
+    .container {
+        margin-top: 0;
+    }
+    .card-container {
+        flex-direction: column;
+    }
+    .container .card-container:nth-child(1),
+    .container .card-container:nth-child(3) {
+        flex-direction: column-reverse;
+    }
+    .card {
+        height: 250px;
+        width: 250px;
+    }
+    .card-text {
+        width: 90%;
+        margin-top: 2rem;
+        text-align: center;
+    }
+    .card:hover > .card-wrapper::before {
+        height: 190px;
+        width: 190px;
+    }
+}
