correção de erros de referência e na interface

--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ h2 {
     height: 300px;
     width: 400px;
     margin: 3rem 0 0;
-    background-image: url(./landscape.jpg);
+    background-image: url(./landscape.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
