--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ h2 {
     justify-content: center;
     cursor: pointer;
     z-index: 9999;
-    transition: 400ms ease-in-out 0;
+    transition: 400ms ease-in-out 0s;
 }
 .checkbox .trace {
     background-color: white;
@@ -117,7 +117,7 @@ h2 {
     border-radius: 50%;
     box-shadow: 0px 0px 0px 0px white;
     z-index: -1;
-    transition: 400ms ease-in-out 0;
+    transition: 400ms ease-in-out 0s;
 }
 .menu-items {
     position: fixed;
@@ -204,6 +204,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+    filter: grayscale(0.2);
     color: white;
     cursor: pointer;
     transition: 0.3s;
@@ -223,12 +224,12 @@ h2 {
     position: relative;
 }
 .card-wrapper::before {
-    border: 1px solid white;
     content: "";
     position: absolute;
     height: 100px;
     width: 100px;
     display: block;
+    border: 1px solid #ffffff;
     opacity: 0;
     transition: 0.3s;
 }
@@ -275,7 +276,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1fa594;
+    background-color: #06a166;
 }
 
 /* Responsivo */
